    return immediately.  Add a "stop=" keyword argument that can be set
    to False to preserve the old behavior.

  - Fix use of exitstatfunc on an Action.

  - Introduce all man page function examples with "Example:" or "Examples:".

  - When a file gets added to a directory, make sure the directory gets
    re-scanned for the new implicit dependency.

  From Carsten Koch:

  - Avoid race conditions with same-named files and directory creation
    when pushing copies of files to CacheDir().

  From Tzvetan Mikov:

  - Handle $ in Java class names.

  From Gary Oberbrunner:

  - Add support for the Intel C compiler on Windows64.

  From Sohail Somani:

  - When Cloning a construction environment, set any variables before
    applying tools (so the tool module can access the configured settings)
    and re-set them after (so they end up matching what the user set).

  From Matthias Troffaes:

  - Make sure extra auxiliary files generated by some LaTeX packages
    and not ending in .aux also get deleted by scons -c.

  From Greg Ward:

  - Add a $JAVABOOTCLASSPATH variable for directories to be passed to the
    javac -bootclasspath option.

  From Christoph Wiedemann:

  - Add implicit dependencies on the commands used to build a target.




RELEASE 0.97.0d20070809 - Fri, 10 Aug 2007 10:51:27 -0500

  From Lars Albertsson:

  - Don't error if a #include line happens to match a directory
    somewhere on a path (like $CPPPATH, $FORTRANPATH, etc.).

  From Mark Bertoglio:

  - Fix listing multiple projects in Visual Studio 7.[01] solution files,
    including generating individual project GUIDs instead of re-using
    the solution GUID.

  From Jean Brouwers:

  - Add /opt/SUNWspro/bin to the default execution PATH on Solaris.

  From Allan Erskine:

  - Only expect the Microsoft IDL compiler to emit *_p.c and *_data.c
    files if the /proxy and /dlldata switches are used (respectively).

  From Steven Knight:
